--- a/Super_Store.ipynb
+++ b/Super_Store.ipynb
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a26fc9e0",
+   "id": "37e07e84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8b0c6ba8",
+   "id": "20edcfe1",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "450e3599",
+   "id": "93cb5f5c",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1d3ed1ad",
+   "id": "5d5f6795",
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "277bb256",
+   "id": "312f487c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f253471f",
+   "id": "8656a562",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e898a482",
+   "id": "18362731",
    "metadata": {},
    "outputs": [
     {
@@ -1010,222 +1010,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "9275e817",
+   "execution_count": 26,
+   "id": "0a6ac71d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RowID</th>\n",
-       "      <th>OrderID</th>\n",
-       "      <th>OrderDate</th>\n",
-       "      <th>ShipDate</th>\n",
-       "      <th>ShipMode</th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>CustomerName</th>\n",
-       "      <th>Segment</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>City</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PostalCode</th>\n",
-       "      <th>Region</th>\n",
-       "      <th>ProductID</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>SubCategory</th>\n",
-       "      <th>ProductName</th>\n",
-       "      <th>Sales</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>Discount</th>\n",
-       "      <th>Profit</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>CA-2016-152156</td>\n",
-       "      <td>2016-11-08</td>\n",
-       "      <td>11/11/2016</td>\n",
-       "      <td>Second Class</td>\n",
-       "      <td>CG-12520</td>\n",
-       "      <td>Claire Gute</td>\n",
-       "      <td>Consumer</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Henderson</td>\n",
-       "      <td>...</td>\n",
-       "      <td>42420</td>\n",
-       "      <td>South</td>\n",
-       "      <td>FUR-BO-10001798</td>\n",
-       "      <td>Furniture</td>\n",
-       "      <td>Bookcases</td>\n",
-       "      <td>Bush Somerset Collection Bookcase</td>\n",
-       "      <td>261.96</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>41.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>CA-2016-152156</td>\n",
-       "      <td>2016-11-08</td>\n",
-       "      <td>11/11/2016</td>\n",
-       "      <td>Second Class</td>\n",
-       "      <td>CG-12520</td>\n",
-       "      <td>Claire Gute</td>\n",
-       "      <td>Consumer</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Henderson</td>\n",
-       "      <td>...</td>\n",
-       "      <td>42420</td>\n",
-       "      <td>South</td>\n",
-       "      <td>FUR-CH-10000454</td>\n",
-       "      <td>Furniture</td>\n",
-       "      <td>Chairs</td>\n",
-       "      <td>Hon Deluxe Fabric Upholstered Stacking Chairs,...</td>\n",
-       "      <td>731.94</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>219.58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>CA-2016-138688</td>\n",
-       "      <td>2016-06-12</td>\n",
-       "      <td>6/16/2016</td>\n",
-       "      <td>Second Class</td>\n",
-       "      <td>DV-13045</td>\n",
-       "      <td>Darrin Van Huff</td>\n",
-       "      <td>Corporate</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>...</td>\n",
-       "      <td>90036</td>\n",
-       "      <td>West</td>\n",
-       "      <td>OFF-LA-10000240</td>\n",
-       "      <td>Office Supplies</td>\n",
-       "      <td>Labels</td>\n",
-       "      <td>Self-Adhesive Address Labels for Typewriters b...</td>\n",
-       "      <td>14.62</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>6.87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>US-2015-108966</td>\n",
-       "      <td>2015-10-11</td>\n",
-       "      <td>10/18/2015</td>\n",
-       "      <td>Standard Class</td>\n",
-       "      <td>SO-20335</td>\n",
-       "      <td>Sean O'Donnell</td>\n",
-       "      <td>Consumer</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Fort Lauderdale</td>\n",
-       "      <td>...</td>\n",
-       "      <td>33311</td>\n",
-       "      <td>South</td>\n",
-       "      <td>FUR-TA-10000577</td>\n",
-       "      <td>Furniture</td>\n",
-       "      <td>Tables</td>\n",
-       "      <td>Bretford CR4500 Series Slim Rectangular Table</td>\n",
-       "      <td>957.58</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>-383.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>US-2015-108966</td>\n",
-       "      <td>2015-10-11</td>\n",
-       "      <td>10/18/2015</td>\n",
-       "      <td>Standard Class</td>\n",
-       "      <td>SO-20335</td>\n",
-       "      <td>Sean O'Donnell</td>\n",
-       "      <td>Consumer</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Fort Lauderdale</td>\n",
-       "      <td>...</td>\n",
-       "      <td>33311</td>\n",
-       "      <td>South</td>\n",
-       "      <td>OFF-ST-10000760</td>\n",
-       "      <td>Office Supplies</td>\n",
-       "      <td>Storage</td>\n",
-       "      <td>Eldon Fold 'N Roll Cart System</td>\n",
-       "      <td>22.37</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>2.52</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   RowID         OrderID   OrderDate    ShipDate        ShipMode CustomerID  \\\n",
-       "0      1  CA-2016-152156  2016-11-08  11/11/2016    Second Class   CG-12520   \n",
-       "1      2  CA-2016-152156  2016-11-08  11/11/2016    Second Class   CG-12520   \n",
-       "2      3  CA-2016-138688  2016-06-12   6/16/2016    Second Class   DV-13045   \n",
-       "3      4  US-2015-108966  2015-10-11  10/18/2015  Standard Class   SO-20335   \n",
-       "4      5  US-2015-108966  2015-10-11  10/18/2015  Standard Class   SO-20335   \n",
-       "\n",
-       "      CustomerName    Segment        Country             City  ... PostalCode  \\\n",
-       "0      Claire Gute   Consumer  United States        Henderson  ...      42420   \n",
-       "1      Claire Gute   Consumer  United States        Henderson  ...      42420   \n",
-       "2  Darrin Van Huff  Corporate  United States      Los Angeles  ...      90036   \n",
-       "3   Sean O'Donnell   Consumer  United States  Fort Lauderdale  ...      33311   \n",
-       "4   Sean O'Donnell   Consumer  United States  Fort Lauderdale  ...      33311   \n",
-       "\n",
-       "   Region        ProductID         Category SubCategory  \\\n",
-       "0   South  FUR-BO-10001798        Furniture   Bookcases   \n",
-       "1   South  FUR-CH-10000454        Furniture      Chairs   \n",
-       "2    West  OFF-LA-10000240  Office Supplies      Labels   \n",
-       "3   South  FUR-TA-10000577        Furniture      Tables   \n",
-       "4   South  OFF-ST-10000760  Office Supplies     Storage   \n",
-       "\n",
-       "                                         ProductName   Sales  Quantity  \\\n",
-       "0                  Bush Somerset Collection Bookcase  261.96         2   \n",
-       "1  Hon Deluxe Fabric Upholstered Stacking Chairs,...  731.94         3   \n",
-       "2  Self-Adhesive Address Labels for Typewriters b...   14.62         2   \n",
-       "3      Bretford CR4500 Series Slim Rectangular Table  957.58         5   \n",
-       "4                     Eldon Fold 'N Roll Cart System   22.37         2   \n",
-       "\n",
-       "   Discount  Profit  \n",
-       "0      0.00   41.91  \n",
-       "1      0.00  219.58  \n",
-       "2      0.00    6.87  \n",
-       "3      0.45 -383.03  \n",
-       "4      0.20    2.52  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (536180597.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[26], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    df.head()|\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -1235,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "358bd999",
+   "id": "a316d8b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e567b71",
+   "id": "7c2c74a1",
    "metadata": {},
    "outputs": [],
    "source": []
